--- a/email.html
+++ b/email.html
@@ -1,3 +1,5 @@
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
 <form accept-charset="UTF-8" action="https://usebasin.com/f/7072fa271bd1" enctype="multipart/form-data" method="POST">
   <label for="email-address">Email Address</label>
   <input type="email" id="email" name="email" required>
@@ -5,5 +7,7 @@
   <textarea rows="4" cols="50" name="comment" required>
   </textarea>
 
-  <button type="submit">Submit</button>
+<div class="g-recaptcha" data-sitekey="6Lew3SMUAAAAAJ82QoS7gqOTkRI_dhYrFy1f7Sqy"></div>
+
+   <input type="submit" value="Submit">
 </form>
