--- a/email.html
+++ b/email.html
@@ -1,7 +1,7 @@
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
 <form accept-charset="UTF-8" action="https://usebasin.com/f/7072fa271bd1" enctype="multipart/form-data" method="POST">
-  <label for="email-address">Email Address</label>
+  <label for="email-address">Email Address 2</label>
   <input type="email" id="email" name="email" required>
 
   <textarea rows="4" cols="50" name="comment" required>
