--- a/email.html
+++ b/email.html
@@ -1,11 +1,12 @@
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
 <form accept-charset="UTF-8" action="https://usebasin.com/f/7072fa271bd1" enctype="multipart/form-data" method="POST">
-  <label for="email-address">Email Address</label><input type="email" id="email" name="email" required>
-  <br><label for="comment">Comments:</label>
+  Welcome to feedback Form<br>
+  <label for="email-address">Email Address</label><br>
+  <input type="email" id="email" name="email" required><br>
+  <label for="comment">Comments:</label><br>
   <textarea rows="4" cols="50" name="comment" required>I played Disease Annihilator and ....
-  </textarea>
-
+  </textarea><br>
 <div class="g-recaptcha" data-sitekey="6Lew3SMUAAAAAJ82QoS7gqOTkRI_dhYrFy1f7Sqy"></div>
    <input type="submit" value="Submit">
 </form>
