--- a/email.html
+++ b/email.html
@@ -1,8 +1,8 @@
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
 <form accept-charset="UTF-8" action="https://usebasin.com/f/7072fa271bd1" enctype="multipart/form-data" method="POST">
-  Welcome to feedback Form<br>
-  <label for="email-address">Email Address</label><br>
+  Welcome to feedback Form<br><br>
+  <label for="email-address">Email Address:</label><br>
   <input type="email" id="email" name="email" required><br>
   <label for="comment">Comments:</label><br>
   <textarea rows="4" cols="50" name="comment" required>I played Disease Annihilator and ....
