--- a/email.html
+++ b/email.html
@@ -4,6 +4,7 @@
   Welcome to feedback Form<br><br>
   <label for="email-address">Email Address:</label><br>
   <input type="email" id="email" name="email" required><br>
+  <input type="nameu" id="nameu" name="nameu"><br>
   <label for="comment">Comments:</label><br>
   <textarea rows="4" cols="50" name="comment" required>I played Disease Annihilator and ....
   </textarea><br>
