--- a/email.html
+++ b/email.html
@@ -1,10 +1,11 @@
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
 <form accept-charset="UTF-8" action="https://usebasin.com/f/7072fa271bd1" enctype="multipart/form-data" method="POST">
-  Welcome to feedback Form<br><br>
+  Welcome to feedback form, please tell me what you think about my project !<br><br>
+  <label for="name-nick">Name or Nickname:</label><br>
+  <input type="namenick" id="namenick" name="namenick" required><br>
   <label for="email-address">Email Address:</label><br>
-  <input type="email" id="email" name="email" required><br>
-  <input type="nameu" id="nameu" name="nameu"><br>
+  <input type="email" id="email" name="email"><br>
   <label for="comment">Comments:</label><br>
   <textarea rows="4" cols="50" name="comment" required>I played Disease Annihilator and ....
   </textarea><br>
